# bevy_godot

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs  prelude.rs
core/src/plugins/: core.rs  mod.rs  packed_scene.rs  prelude.rs
core/src/plugins/core/: godot_ref.rs  mod.rs  scene_tree.rs  signals.rs  transforms.rs
crates/bevy_godot/: Cargo.toml
crates/bevy_godot/src/: init_macro.rs  lib.rs  node_tree_view.rs  prelude.rs
crates/bevy_godot/src/plugins/: assets.rs  packed_scene.rs
crates/bevy_godot/src/plugins/core/: collisions.rs  godot_ref.rs  input_event.rs  mod.rs  scene_tree.rs  signals.rs  transforms.rs
crates/bevy_godot_proc_macro/: Cargo.toml
crates/bevy_godot_proc_macro/src/: lib.rs
examples/: Cargo.toml  run_godot.rs
examples/assets_demo/: Cargo.toml
examples/assets_demo/godot/: main.tscn  rust_lib.tres
examples/assets_demo/src/: lib.rs
examples/dodge_the_creeps/: Cargo.toml
examples/dodge_the_creeps/godot/: HUD.tscn  Main.tscn  Mob.tscn  Player.tscn  project.godot  rust_lib.tres
examples/dodge_the_creeps/godot/art/: House In a Forest Loop.ogg.res  House In a Forest Loop.res  gameover.res  gameover.wav.res
examples/dodge_the_creeps/src/: lib.rs  main_menu.rs  music.rs
examples/dodge_the_creeps/src/gameplay/: countdown.rs  enemy.rs  gameover.rs  mod.rs  player.rs  score.rs
examples/events_demo/: Cargo.toml
examples/events_demo/godot/: rust_lib.tres
examples/input_events_demo/: Cargo.toml
examples/input_events_demo/godot/: autoload.gdns  main.tscn  rust_lib.tres
examples/input_events_demo/src/: lib.rs
examples/node_tree_view/: Cargo.toml
examples/node_tree_view/godot/: main.tscn  rust_lib.tres
examples/node_tree_view/src/: lib.rs
examples/physics_demo/: Cargo.toml
examples/physics_demo/godot/: ball.tscn  main.tscn  rust_lib.tres
examples/physics_demo/src/: lib.rs
examples/scene_tree_test/: Cargo.toml
examples/scene_tree_test/godot/: main.tscn  project.godot  rust_lib.tres
examples/scene_tree_test/src/: lib.rs
examples/spawn_scene/: Cargo.toml
examples/spawn_scene/godot/: rust_lib.tres  simple_scene.tscn
examples/spawn_scene/src/: lib.rs
src/: init_macro.rs  lib.rs  prelude.rs
src/plugins/: assets.rs  mod.rs  packed_scene.rs
src/plugins/core/: collisions.rs  mod.rs
