[package]
name = "bevy_godot"
version = "0.2.0"
edition = "2021"
license = "MIT"

[features]
default = []

trace = ["bevy/trace"]
trace_chrome = ["trace", "bevy/trace_chrome"]

[dependencies]
gdnative = "0.10"
bevy = {version = "0.8", default-features = false, features = ["bevy_asset"]}
anyhow = "1.0.58"