[package]
name = "assets_demo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
path = "../run_godot.rs"
name = "assets_demo"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.10"
bevy = {version = "0.7", default-features = false}
bevy_godot = {path = "../../core"}
bevy_asset_loader = "0.11.0"