[package]
name = "assets_demo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
path = "../run_godot.rs"
name = "assets_demo"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = {version = "0.8", default-features = false}
bevy_godot = {path = "../../crates/bevy_godot"}
bevy_asset_loader = "0.12.0"
