[package]
name = "dodge_the_creeps"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
path = "../run_godot.rs"
name = "dodge_the_creeps"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = {version = "0.8", default-features = false}
bevy_godot = {path = "../.."}
fastrand = "1.8.0"
bevy_asset_loader = "0.12.0"