[package]
name = "input_events_demo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
path = "../run_godot.rs"
name = "run_events_demo"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.10"
bevy_godot = {path = "../../crates/bevy_godot"}
bevy = {version = "0.8", default-features = false}